# mixit

./: .gitignore  README.md  Readme.md  index.html  justfile  package-lock.json  package.json  tailwind.config.js
.zellij/: services.kdl
backend/db/: auth.sql  usuario.sql
db/: 0. usuario.sql  00. usuario.surql  02. tag.surql  03. prenda.surql  07. tag_mixit.surql  08. mixes.surql  1. auth.sql  1. auth.srql  10.funs.surql  2. prenda.sql  2. prenda.srql  2. tag.surql  3. sube.sql  4. mixit.srql  4. tag_prenda.surql  5. mixes.srql  5. sube.surql  6. mixit.surql  7. tag_mixit.surql
db/migrations/: 00. usuario.surql  01. auth.surql  02. tag.surql  03. prenda.surql  04. sube.surql  04. tag_prenda.surql  05. mixit.surql  06. tagged.surql  07. mixes.surql  08. hooks.surql  09. follows.surql  10. follows.surql  10. funs.surql  11. funs.surql  11. wish.surql
imgdb/: Cargo.toml  README.md
imgdb/src/: main.rs
mixit/: package-lock.json  package.json
src/: App.tsx  surreal.tsx
src/components/: AutoCarousel.tsx  Avatar.tsx  Button.tsx  Footer.tsx  Gallery.tsx  GoogleAuth.tsx  LandingPage.tsx  Login.tsx  Navbar.tsx  Prenda.tsx  PrivacyToggle.tsx  Register.tsx  TabGrid.tsx
src/files/: upload.tsx
src/layout/: MainLayout.tsx  ProtectedRoute.tsx
src/surreal/: auth.ts  client.ts  ctx.ts
src/views/: Details.tsx  Explore.tsx  ExploreGuest.tsx  LandingPage.tsx  Login.tsx  Mixit.tsx  Moodboard.tsx  Profile.tsx  Register.tsx  Upload.tsx
